# Ai_Compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  LOOKHERE.md  README.md
.claude/: settings.local.json
docs/: PROJECT_FRAMEWORK.md
examples/: create_test_onnx.py  test_model.onnx  transformer_block.json
include/self_compiler/: 遇到的问题.txt
include/self_compiler/app/: compiler_app.h
include/self_compiler/backend/: command_stream.h  ethosu_backend.h  ethosu_command.h  toy_backend.h
include/self_compiler/common/: status.h
include/self_compiler/frontend/: importer.h  importer_factory.h  json_importer.h  llama_config_importer.h  onnx_importer.h  transformer_block_builder.h
include/self_compiler/ir/: graph.h  op_registry.h  operation.h  tensor.h  value_shape.h
include/self_compiler/memory/: live_interval.h  memory_planner.h
include/self_compiler/mlir/: mlir_bridge.h
scripts/: configure_dev_env.ps1  run_utf8.ps1  wsl_clean_bashrc.py  wsl_env_setup.sh
scripts/hello_fvp/: SETUP_AND_NOTES.md  build.sh  corstone300.ld  hello.c  run.sh  startup.c
src/app/: compiler_app.cpp
src/backend/: command_stream.cpp  ethosu_backend.cpp  toy_backend.cpp
src/frontend/: importer_factory.cpp  json_importer.cpp  llama_config_importer.cpp  onnx_importer.cpp  transformer_block_builder.cpp
src/ir/: op_registry.cpp
src/memory/: live_interval.cpp  memory_planner.cpp
src/mlir/: mlir_bridge_stub.cpp
src/passes/: canonicalize_pass.cpp  graph_partition_pass.cpp  lower_transformer_to_runtime_pass.cpp  pass_manager.cpp  quantize_pass.cpp  recognize_onnx_ops_pass.cpp  shape_inference_pass.cpp  tiling_pass.cpp
tests/: kv_cache_test.cpp  memory_planner_test.cpp  quantize_test.cpp  shape_inference_test.cpp  tiling_test.cpp
tools/: self_compiler_main.cpp
(+9 files in other folders)
